[package]
name = "ragnarek-imgui"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
windows = { version = "0.58.0", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
cc = "1.0"

[lib]
name = "ragnarek_imgui"
crate-type = ["rlib", "dylib"]
